--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         <div class="slider">
             <div class="container">
-                <div class="row">
+                <div class="row row-slider">
                     <div class="col-sm-7 text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         Quaerat repellendus quis, dolorem illum recusandae
                         harum eius doloremque corporis at...
