--- a/index.html
+++ b/index.html
@@ -42,21 +42,28 @@
 
                     </div>
                     <div class="col-sm-1"></div>
-                    <div class="col-xs-hidden col-sm-2 search">Search</div>
+                    <div class="col-xs-hidden col-sm-2 search">
+                        <form class="form">
+                            <input type="text" class="search-input-text" placeholder="SEARCH">
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="slider">
             <div class="container">
                 <div class="row row-slider">
+                    <div class="col-sm-12 h1">
+                        <h1>welcome to our marketplace</h1>
+                    </div>
                     <div class="col-sm-7 text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         Quaerat repellendus quis, dolorem illum recusandae
                         harum eius doloremque corporis at...
                     </div>
                     <div class="col-sm-5 text"></div>
-                    <div class="col-sm-12 button">
+                    <div class="col-sm-12 buttons">
                         <button class="button">view more</button>
-                        <button class="button">videotour</button>
+                        <button class="button">video tour</button>
                     </div>
                 </div>
             </div>
