--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="styleXS.css">
     <link rel="stylesheet" href="styleSM.css">
+    <link rel="stylesheet" href="styleLG.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -26,12 +27,12 @@
         <div class="full-container">
             <div class="container">
                 <div class="row hidden-row">
-                    <div class="col-xs-12 col-sm-3 logo">
+                    <div class="col-xs-12 col-sm-3 col-lg-3 logo">
                         <a href="">
                             <img src="img/logo.png" alt="">
                         </a>
                     </div>
-                    <div class="col-xs-12 col-sm-6 menu">
+                    <div class="col-xs-12 col-sm-6 col-lg-6 menu">
                         <a class="menu-a" href="">home</a>
                         <a class="menu-a" href="">about</a>
                         <a class="menu-a" href="">work</a>
@@ -41,8 +42,8 @@
                         <a class="menu-a" href="">contacts</a>
 
                     </div>
-                    <div class="col-sm-1"></div>
-                    <div class="col-xs-hidden col-sm-2 search">
+                    <div class="col-sm-1 col-lg-1"></div>
+                    <div class="col-xs-hidden col-sm-2 col-lg-2 search">
                         <form class="form">
                             <input type="text" class="search-input-text" placeholder="SEARCH">
                         </form>
@@ -50,26 +51,133 @@
                 </div>
             </div>
         </div>
+
+
         <div class="slider">
             <div class="container">
                 <div class="row row-slider">
-                    <div class="col-sm-12 h1">
+                    <div class="col-sm-12 col-lg-12 slider-h1">
                         <h1>welcome to our marketplace</h1>
                     </div>
-                    <div class="col-sm-7 text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Quaerat repellendus quis, dolorem illum recusandae
-                        harum eius doloremque corporis at...
+                    <div class="col-sm-7 col-lg-7 text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Quaerat repellendus quis...
                     </div>
-                    <div class="col-sm-5 text"></div>
-                    <div class="col-sm-12 buttons">
+                    <div class="col-sm-5 col-lg-5 text"></div>
+                    <div class="col-sm-12 col-lg-12 buttons">
                         <button class="button">view more</button>
                         <button class="button">video tour</button>
                     </div>
                 </div>
             </div>
-
         </div>
-        <main class="main">main</main>
+        </div>
+
+
+
+        <main class="main">
+            <div class="we-are-modest">
+                <div class="container">
+                    <div class="row row-modest">
+                        <div class="col-sm-12 col-lg-12 modest-block">
+                            <h1 class="modest-h1">we are modest.</h1>
+                        </div>
+                        <div class="col-sm-7 col-lg-7 modest-info">
+                            <p class="modest-text">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem quisquam animi,
+                                vitae eligendi architecto, nesciunt tenetur libero consequuntur dolore et soluta rerum,
+                                .Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem quisquam animi,
+                                vitae eligendi architecto, nesciunt tenetur libero consequuntur dolore et soluta rerum,
+                            </p>
+                            <p class="modest-text">
+                                Lorem ipsum dolor sit <b>amet consectetur adipisicing</b> mon elit.Quia molestiae
+                                eveniet,Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem quisquam animi,
+                                vitae eligendi architecto, nesciunt tenetur libero consequuntur dolore et soluta rerum,
+                                facilis hic veritatis est. Quasi at dolor,officia
+                                sit perspiciatis officiis vitae?
+                            </p>
+                            <div class="modest-net">
+                                <ul class="modest-ul">
+                                    <li class="box fb"></li>
+                                    <li class="box twitter"></li>
+                                    <li class="box google"></li>
+                                    <li class="box ball"></li>
+                                    <li class="box be"></li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <div class="col-sm-5 col-lg-5 modest-pages">
+                            <div class="row row-in-row">
+                                <div class="col-sm-2 col-lg-1 box01">
+                                    01
+                                </div>
+                                <div class="col-sm-9 col-lg-9 row01-info">
+                                    <h3 class="row01-h3">dedication to the customers</h3>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, quibusdam! 
+                                </div>
+
+                                <div class="col-sm-2 col-lg-2 box02">
+                                    02
+                                </div>
+                                <div class="col-sm-9 col-lg-9 row02-info">
+                                    <h3 class="row02-h3">working closely with our clients</h3>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, placeat?
+                                    Suscipit, esse.
+                                </div>
+
+                                <div class="col-sm-2 col-lg-2 box03">
+                                    03
+                                </div>
+                                <div class="col-sm-9 col-lg-9 row03-info">
+                                    <h3 class="row03-h3">increase happiness</h3>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, minus odio?
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="meet-the-team">
+                <div class="container">
+                    <div class="row row-meet">
+                        <div class="col-lg-12 meet-block">
+                            <h1 class="meet-h1">meet the team.</h1> 
+                        </div>
+                        <div class="col-lg-3 Bromley">
+                            <div class="img"><img src="img/img (6).png" alt=""></div>
+                            <div class="name">
+                                <h3>gloria bromley</h3>
+                                <p>GEO and Founder</p>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-3 Torres">
+                            <div class="img"><img src="img/img (5).png" alt=""></div>
+                            <div class="name">
+                                <h3>paul torres</h3>
+                                <p>Head and Development</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 Gillette">
+                            <div class="img"><img src="img/img (4).png" alt=""></div>
+                            <div class="name">
+                                <h3>judith gillette</h3>
+                                <p>Graphic Dessigner</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 Reed">
+                            <div class="img"><img src="img/img (3).png" alt=""></div>
+                            <div class="name">
+                                <h3>delores reed</h3>
+                                <p>Clien Service Director</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
         <footer class="footer">footer</footer>
 
 
